# wowza-rest-rust

./: Cargo.toml  README.md  project.vim
src/: lib.rs
src/streaming_engine/: mod.rs  stats.rs  types.rs  video_recording.rs
src/streaming_engine/application/: mod.rs
